# ai

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
examples/: 02_ml_minimal.cpp  CMakeLists.txt
examples/distributed/: 01_hello.cpp  CMakeLists.txt
examples/ml/: 02_regression_kmeans.cpp  CMakeLists.txt  dataset_csv.cpp  full_pipeline.cpp  kmeans.cpp  linear_regression.cpp  logistique_regression.cpp  preprocessing.cpp  test_ml.cpp
examples/nlp/: 01_tokenize.cpp  02_embed.cpp  03_summarize.cpp  CMakeLists.txt
examples/nn/: 01_summary.cpp  CMakeLists.txt
examples/tensor/: 01_core_minimal.cpp  01_tensor_minimal.cpp  02_tensor_demo.cpp  03_device_parse.cpp  04_engine_info.cpp  CMakeLists.txt  smoke.cpp
examples/vision/: 01_info.cpp  02_detect.cpp  03_track.cpp  CMakeLists.txt
